crates/figue/tests/integration/snapshots/main__integration__layered__layered_dump_shows_all_sources.snap
---
source: crates/figue/tests/integration/layered.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Error: Missing required arguments

You provided:
  --debug --settings.experimental true

Missing:
  --settings.name 

Example usage:
  --debug --settings.experimental true --settings.name <value>

Run with --help for usage information.
