crates/figue/tests/integration/snapshots/main__integration__layered__layered_missing_required_field.snap
---
source: crates/figue/tests/integration/layered.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Error: Missing required arguments

You provided:
  -v

Missing:
  --config.database.url 

Example usage:
  -v --config.database.url <value>

Run with --help for usage information.
